--- a/frontend/fastapi-blog/package.json
+++ b/frontend/fastapi-blog/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
